--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "nodemon server.js"
   },
+  "engines":{
+    "node":"12.14.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
