--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "nodemon server.js"
   },
-  "engines":{
-    "node":"12.14.1"
+  "engines": {
+    "node": "12.14.1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.9",
     "nodemon": "^2.0.3",
